2013-01-25  Jihoon Kim (jihoon)

	* edje entry : Remove ecore_imf_context_reset, cursor update in mouse move event because it's useless.
	* edje entry : move ecore_imf_context_cursor_position_set from mouse down event to mouse up event


2013-01-24  Sung W. Park (sung_)

	* Add EVAS_GL_DIRECT_MEM_OPT to enable on-demand fallback memory
        allocation policy for EvasGL direct rendering.

2013-01-24  Cedric Bail

	* Don't over align data if they are already aligned.

2013-01-22  Mike Blumenkrantz

        * rebase dns.c against upstream

2013-01-22  Sung W. Park (sung_)

	* Applied on-demand memory allocation policy for Evas GL Surface
        for direct rendering optimization.  For direct rendering in EvasGL,
        it falls back to FBO rendering if the conditions are not met.  Before,
        the fallback resources were created in the beginning but now they are
        created and destroyed on need base.

2013-01-21  Carsten Haitzler (The Rasterman)

        * Fix xsync problem in ecore_x_image_get() where prior errors
        can get caught.

2013-01-18  Jihoon Kim (jihoon)

	* edje entry: remove ecore_imf_context_reset in mouse up event because it's useless.

2013-01-18  Cedric Bail

	* Ecore_Input_Evas: add infrastructure to handle buggy touchscreen by using
	environment variable ECORE_INPUT_FIX and ECORE_INPUT_TIMEOUT_FIX.

2013-01-17  Jihoon Kim (jihoon)

	* Edje : cursor position and location will be passed when it's really changed
	in case of mouse down, move, and up event

2013-01-16  Carsten Haitzler (The Rasterman)

        * Fixed pixman image wrapping to handle allocated size instead
        of image size (unless allocated is 0/wrong).

2013-01-15  Paulo Alcantara (pcacjr)

	* Evas engines: Introduce multi_font_draw() function
	* Evas textgrid: Change render to support multi_font_draw()

2013-01-15  Tom Hacohen (TAsn)

	* Evas textblock: Fixed issue and simplified cursor_geometry_get.
	* Evas text: Fixed issue with horiz advance.