@@ -318,7 +318,7 @@ _edje_cache_file_coll_open(const char *file, const char *coll, int *error_ret, E
    if (!_edje_file_hash)
      {
 	_edje_file_hash = eina_hash_string_small_new(NULL);
-	goto open_new;
+	goto find_list;
      }
 
    edf = eina_hash_find(_edje_file_hash, file);
@@ -333,7 +333,8 @@ _edje_cache_file_coll_open(const char *file, const char *coll, int *error_ret, E
 	edf->references++;
 	goto open;
      }
-
+   
+find_list:
    EINA_LIST_FOREACH(_edje_file_cache, l, edf)
      {
 	if (!strcmp(edf->path, file))
