@@ -132,3 +132,5 @@ Fixes:
     * Fixed x11 error sync issue with ecore_x_image_get()
     * Fix evas gif loader to return the correct frame duration
     * Prevent a crash even if an invalid object is swallowed into an edje object.
+    * Fix cache mise when active edje hash is empty.
+    
